--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,6 @@
+<h1>Item to purchase</h1>
 
+<form method="POST" action="/checkout" name="form1">
+  <input type="text" name="[item]" id="item">
+  <input type="submit" name="submit">
+</form>
