--- a/views/index.erb
+++ b/views/index.erb
@@ -2,5 +2,5 @@
 
 <form method="POST" action="/checkout" name="form1">
   <input type="text" name="[item]" id="item">
-  <input type="submit" name="submit">
+  <input type="submit" name="submit" value="Submit">
 </form>
