--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,7 @@
 <h1>Item to purchase</h1>
 
 <form method="POST" action="/checkout" name="form1">
+  <label for="item">Item:</label>
   <input type="text" name="[item]" id="item">
-  <input type="submit" name="submit" value="Submit">
+  <input type="submit" name="submit" value="submit">
 </form>
