--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,4 @@
-
+<form action="/checkout" method="post">
+  Purchase Item: <input type="text" name="item">
+  <input type="submit" id='submit'>
+</form>
